@@ -40,5 +40,10 @@ class BugsTestCase(unittest.TestCase):
             ttl = dns.ttl.from_text("2147483648")
         self.assertRaises(dns.ttl.BadTTL, bad)
 
+    def test_empty_NSEC3_window(self):
+        rdata = dns.rdata.from_text(dns.rdataclass.IN, dns.rdatatype.NSEC3,
+                                    "1 0 100 ABCD SCBCQHKU35969L2A68P3AD59LHF30715")
+        self.assertTrue(rdata.windows == [])
+
 if __name__ == '__main__':
     unittest.main()
