@@ -1,3 +1,9 @@
+2012-08-28  Bob Halley  <halley@dnspython.org>
+
+	* dns/rdtypes/ANY/NSEC3.py (NSEC3.from_text): The NSEC3 from_text()
+	  method could erroneously emit empty bitmap windows (i.e. windows
+	  with a count of 0 bytes); such bitmaps are illegal.
+
 2012-04-10  Bob Halley  <halley@dnspython.org>
 
 	* dns/dnssec.py (_validate_rrsig): Fix python3 port issues with
